# tauri-plugin-status-bar-color

./: Cargo.toml  README.md  build.rs  package.json
android/: build.gradle.kts  local.properties  settings.gradle
android/src/androidTest/java/: ExampleInstrumentedTest.kt
android/src/main/java/: PluginImpl.kt  StatusBarColorPlugin.kt
android/src/test/java/: ExampleUnitTest.kt
examples/tauri-app/: package.json
examples/tauri-app/src/: App.svelte
examples/tauri-app/src-tauri/: Cargo.toml
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: lib.rs
guest-js/: index.ts
ios/: Package.swift  README.md
ios/Sources/: StatusBarColorPlugin.swift
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs
