[package]
name = "tauri-plugin-status-bar-color"
version = "1.0.0"
authors = [ "Zhang Yao<cineazhan@gmail.com>" ]
description = "A Tauri plugin for set status bar's color."
homepage = "https://github.com/Cinea4678/tauri-plugin-status-bar-color"
repository = "https://github.com/Cinea4678/tauri-plugin-status-bar-color"
license = "MIT"
edition = "2021"
rust-version = "1.70"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-status-bar-color"

[dependencies]
tauri = { version = "2.0.0-beta.23" }
serde = "1.0"
thiserror = "1.0"

[build-dependencies]
tauri-plugin = { version = "2.0.0-beta.18", features = ["build"] }
